--- a/project1backend/pom.xml
+++ b/project1backend/pom.xml
@@ -142,12 +142,34 @@ database connection pooling
             <artifactId>validation-api</artifactId>
             <version>1.0.0.GA</version>
         </dependency>
-
+ <dependency>
+        <groupId>org.springframework.security</groupId>
+        <artifactId>spring-security-core</artifactId>
+        <version>4.1.2.RELEASE</version>
+        </dependency>
+        
+         <dependency>
+        <groupId>org.springframework.security</groupId>
+        <artifactId>spring-security-web</artifactId>
+        <version>4.1.2.RELEASE</version>
+        </dependency>
+        
+         <dependency>
+        <groupId>org.springframework.security</groupId>
+        <artifactId>spring-security-config</artifactId>
+        <version>4.1.2.RELEASE</version>
+        </dependency>
+        
+         <dependency>
+        <groupId>org.springframework.security</groupId>
+        <artifactId>spring-security-taglibs</artifactId>
+        <version>4.1.2.RELEASE</version>
+        </dependency>
 <dependency>
 <!-- uploading an image -->
 <groupId>commons-fileupload</groupId>
 <artifactId>commons-fileupload</artifactId>
-<version>1.2.2</version>
+<version>1.3.1</version>
 </dependency>
 <dependency>
 <groupId>commons-io</groupId>
